--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style-a1.css/style.css">
 </head>
-<body>
-    <header>
 
+<body>
+    <header class="banner1">
+        <h3 class="small-header">Happy New Year</h3>
+        <h1 class="main-header">New year party   <br>celebration</h1>
     </header>
 
     <main>
@@ -15,6 +22,7 @@
     </main>
 
     <footer></footer>
-    
+
 </body>
+
 </html>
