second-part-done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>New Year</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style-a1.css/style.css">
 </head>
@@ -14,11 +17,16 @@
 <body>
     <header class="banner1">
         <h3 class="small-header">Happy New Year</h3>
-        <h1 class="main-header">New year party   <br>celebration</h1>
+        <h1 class="main-header">New year party <br>celebration</h1>
     </header>
 
     <main>
-
+        <section class="container1">
+            <h1 class="sale">65% OFF</h1>
+            <h3 class="sale-msg1">OUR HOLIDAY DEALS ARE BETTER</h3>
+            <h2 class="sale-msg2">ALL CATEGORIES</h2>
+            <img src="resources/New Year Photo.png" alt="" class="pic1">
+        </section>
     </main>
 
     <footer></footer>
