party-section-done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
 </head>
 
 <body>
-    <header class="banner1">
-        <h3 class="small-header">Happy New Year</h3>
-        <h1 class="main-header">New year party <br>celebration</h1>
+    <header>
+        <section class="container">
+            <div class="text">
+                <p class="small-header">Happy New Year</p>
+                <h1 class="main-header">Happy New year Party Celebration</h1>
+            </div>
+        </section>
+        </div>
     </header>
 
     <main>
@@ -27,6 +32,29 @@
             <h2 class="sale-msg2">ALL CATEGORIES</h2>
             <img src="resources/New Year Photo.png" alt="" class="pic1">
         </section>
+
+
+        <section class="party">
+
+            <div class="banner-content">
+                <h1 class="party-header">Welcome to midnight party</h1>
+                <p class="party-description">
+                    our midnight party is popular for its various activities.
+                    you can have the fun of you life. exciting deals are also waiting just for you.so whats
+                    the wait for..    
+                </p>
+                <button id="btn1">JOIN NOW</button>
+            </div>
+
+            <img src="resources/Group 70.png" alt="" class="banner-image">
+            
+           
+        </section>
+
+
+
+
+
     </main>
 
     <footer></footer>
@@ -34,3 +62,7 @@
 </body>
 
 </html>
+
+
+
+
