portfolio-section-done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,34 @@
            
         </section>
 
+        <section class="portfolio">
+            <div class="portfolio-head">
+                <p class="heading1">THE BEST GIFT'S</p>
+                <h1 class="main-port-heading">
+                    Our Awesome Portfolio
+                </h1>
+                <p class="portfolio-description">
+                    our best deals coming to this new year eve.get exciting deals and exclusive products  <br>  to celebrate the new year. have a look
+                    of our new products.
+                </p>
+            </div>
 
+
+            <div class="port-img-sec1">
+                <img src="resources/Rectangle 3.png" alt="" class="rec3" >
+                <img src="resources/Rectangle 4.png" alt="" class="rec4" >
+                <img src="resources/Rectangle 5.png" alt="" class="rec5">
+            </div>
+
+            <div class="port-img-sec2">
+                <img src="resources/Rectangle 6.png" alt="" class="rec6" >
+                <img src="resources/Rectangle 7.png" alt="" class="rec7" >
+                <img src="resources/Rectangle 8.png" alt=""  class="rec8" >
+            </div>
+        </section>
+
+
+        
 
 
 
