--- a/index.html
+++ b/index.html
@@ -51,6 +51,47 @@
            
         </section>
 
+        <section class="join-info">
+            <h3 class="place"> <span class="red">Place:</span> New park Hotel</h3>
+            <h3 class="date" > <span class="red">Date:</span> 31 December Night 2023</h3>
+            <h3 class="time"> <span class="red">Time: </span> Evening 7.30 pm To 12.30 Am </h3>
+
+            <button class="red-btn">JOIN NOW</button>
+        </section>
+
+
+        <section class="coming-soon">
+
+            <div class="best-offer">
+                <p class="new">NEW BEST OFFER</p>
+                <h1 class="coming">Coming Soon</h1>
+                <p class="offer-description1">
+                    We are so close to another new year. as we celebrating the new year eve with you, so we are giving you more exciting offers.
+                </p>
+
+            </div>
+
+
+            <div class="tarabati">
+                <img src="resources/Ellipse 1.png" alt="" class="img-tarabati">
+            </div>
+
+
+            <div class="y-2024">
+                <h2 class="year">2024</h2>
+                <p class="offer-description2">
+                    We are so close to another new year. as we celebrating the new year eve with you
+                </p>
+                <img src="resources/Group 96.png" alt="">
+
+            </div>
+
+        </section>
+
+
+
+
+
         <section class="portfolio">
             <div class="portfolio-head">
                 <p class="heading1">THE BEST GIFT'S</p>
