--- a/index.html
+++ b/index.html
@@ -88,8 +88,26 @@
 
         </section>
 
+        <section class="fifty-p-off">
+            <h3 class="what">WHAT IS FUNCTIONAL</h3>
+            <h1 class="holiday"><span class="holidays">Holidays</span> Sale 50% </h1>
+            <p class="sale-description">
+                Enjoy flat 50% off everything we have. from the 31st of December till the first 3 days of new year enjoy fifty percent off on every product including the upcoming ones as well.
+            </p>
+        </section>
 
 
+        <section class="gift-items">
+            <div class="gift-box">
+                <img src="resources/Group 75.png" alt="">
+            </div>
+            <div class="discount">
+                <img class="dis-img" src="resources/Group 44.png" alt="">
+            </div>
+        </section>
+
+
+     
 
 
         <section class="portfolio">
